gestion des erreurs swagger
