# routes/api.php
@@ -4,7 +4,12 @@ use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\CompteController;
 
 Route::middleware('api')->group(function () {
-    Route::prefix('comptes')->group(function () {
-        Route::get('/', [CompteController::class, 'index']);
+
+    Route::prefix('V1')->group(function () {
+
+        Route::prefix('comptes')->group(function () {
+            Route::get('/', [CompteController::class, 'index']);
+        });
     });
 });
+
